@@ -3,6 +3,17 @@
 # NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
 # This version tag is used in building "cvstag.h" for version identification.
 
+2007-04-26	David Fang		<fangism@users.sourceforge.net>
+
+	* HACKT-00-01-04-main-00-81-19-chpsim-04-19:
+	  Tiny patch to propagate cause_trace_id, but not sure if correct.
+	  Discovered that delayed successor rechecking with decoupled channels
+		result is completely broken result, with tokens being lost
+		because of improper blocking.  First priority now is to
+		tightly synchronize sends and receives.  
+	  Still need to check correctness of selections, suspected wrong now.  
+
+
 2007-04-25	David Fang		<fangism@users.sourceforge.net>
 
 	* HACKT-00-01-04-main-00-81-19-chpsim-04-18:
